--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -612,7 +612,7 @@ strong * {
 				color: #54A8C7;
 }
 
-.button,
+.button, .error-404 .right .button,
 .woocommerce #respond input#submit,
 .woocommerce a.button,
 .woocommerce button.button,
@@ -620,7 +620,8 @@ strong * {
 				cursor: pointer;
 				height: 50px;
 				padding: 0 80px 0 30px;
-				background: #ffffff;
+				background: transparent;
+				color: #231F20;
 				display: -webkit-inline-box;
 				display: -ms-inline-flexbox;
 				display: inline-flex;
@@ -633,14 +634,15 @@ strong * {
 				font-size: 18px;
 				text-decoration: none;
 				font-weight: 600;
-				border-radius: 30px;
+				border-radius: 3px;
 				position: relative;
+				border: 1px solid #231F20;
 				overflow: hidden;
 				-webkit-transition: 0.3s ease-out;
 				transition: 0.3s ease-out;
 }
 @media only screen and (max-width: 768px) {
-				.button,
+				.button, .error-404 .right .button,
 				.woocommerce #respond input#submit,
 				.woocommerce a.button,
 				.woocommerce button.button,
@@ -660,7 +662,7 @@ strong * {
 				z-index: 1;
 				-webkit-transition: 0.3s ease-out;
 				transition: 0.3s ease-out;
-				color: #34375A;
+				color: #231F20;
 }
 @media only screen and (max-width: 768px) {
 				.button__text,
@@ -671,12 +673,14 @@ strong * {
 								width: 100%;
 				}
 }
-.button:hover,
+.button:hover, .error-404 .right .button:hover,
 .woocommerce #respond input#submit:hover,
 .woocommerce a.button:hover,
 .woocommerce button.button:hover,
 .woocommerce input.button:hover {
-				background-color: #34375A;
+				background-color: #FB3BA5;
+				color: #ffffff;
+				border: 1px solid #FB3BA5;
 }
 .button:hover .button__text,
 .woocommerce #respond input#submit:hover .button__text,
@@ -1093,7 +1097,8 @@ section .gform_wrapper .gform_footer .button {
 				cursor: pointer;
 				height: 50px;
 				padding: 0 80px 0 30px;
-				background: #ffffff;
+				background: transparent;
+				color: #231F20;
 				display: -webkit-inline-box;
 				display: -ms-inline-flexbox;
 				display: inline-flex;
@@ -1106,8 +1111,9 @@ section .gform_wrapper .gform_footer .button {
 				font-size: 18px;
 				text-decoration: none;
 				font-weight: 600;
-				border-radius: 30px;
+				border-radius: 3px;
 				position: relative;
+				border: 1px solid #231F20;
 				overflow: hidden;
 				-webkit-transition: 0.3s ease-out;
 				transition: 0.3s ease-out;
@@ -1139,7 +1145,7 @@ section .gform_wrapper .gform_footer .button__text {
 				z-index: 1;
 				-webkit-transition: 0.3s ease-out;
 				transition: 0.3s ease-out;
-				color: #34375A;
+				color: #231F20;
 }
 @media only screen and (max-width: 768px) {
 				.site .gform_wrapper .gform_footer .button__text,
@@ -1153,7 +1159,9 @@ section .gform_wrapper .gform_footer .button__text {
 .woocommerce .gform_wrapper .gform_footer .button:hover,
 .woocommerce .site .gform_wrapper .gform_footer .button:hover,
 section .gform_wrapper .gform_footer .button:hover {
-				background-color: #34375A;
+				background-color: #FB3BA5;
+				color: #ffffff;
+				border: 1px solid #FB3BA5;
 }
 .site .gform_wrapper .gform_footer .button:hover .button__text,
 .woocommerce .gform_wrapper .gform_footer .button:hover .button__text,
@@ -2844,6 +2852,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
 				        align-items: center;
+				-webkit-transition: all 0.3s ease;
+				transition: all 0.3s ease;
 }
 .accordion--faqs .accordion__question::after {
 				content: "";
@@ -2851,6 +2861,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				display: inline-block;
 				width: 29px;
 				height: 29px;
+				-webkit-transition: all 0.3s ease;
+				transition: all 0.3s ease;
 }
 .accordion--faqs .accordion__item {
 				border-bottom: 1px solid #FB3BA5;
@@ -2867,8 +2879,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				        transform: translate(10px);
 }
 .accordion--faqs .accordion__item.js-open .accordion__question::after {
-				-webkit-transform: rotate(-180deg);
-				        transform: rotate(-180deg);
+				-webkit-transform: rotate(-95deg);
+				        transform: rotate(-95deg);
 }
 .accordion--faqs .accordion__answer {
 				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
@@ -3255,5 +3267,110 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
 				background-color: #54A8C7;
+}
+
+.error-404 {
+				padding-top: clamp(170px, 21.8px + 0.247 * 100vw, 306px);
+}
+.error-404 .container {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+}
+@media only screen and (max-width: 1050px) {
+				.error-404 .container {
+								-webkit-box-orient: vertical;
+								-webkit-box-direction: normal;
+								    -ms-flex-direction: column;
+								        flex-direction: column;
+				}
+}
+.error-404 .left {
+				width: 34.5%;
+}
+.error-404 .left .e404 {
+				color: #231F20;
+				font-size: clamp(120px, 4.2px + 0.193 * 100vw, 226px);
+				font-weight: 400;
+				line-height: 1;
+				font-family: "Druk-Medium";
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.error-404 .right {
+				padding-top: clamp(20px, 20px + 0 * 100vw, 20px);
+}
+.error-404 .right .title {
+				color: #231F20;
+				font-size: clamp(50px, 23px + 0.045 * 100vw, 75px);
+				font-weight: 600;
+				margin-bottom: 40px;
+				line-height: 1.2;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
+}
+.error-404 .right .title:after {
+				height: clamp(5px, -0.4px + 0.009 * 100vw, 10px);
+				width: clamp(50px, 11.6px + 0.064 * 100vw, 85px);
+				background: #FB3BA5;
+				content: "";
+				display: block;
+				-webkit-transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0s;
+				        transition-delay: 0s;
+				-webkit-transform: scaleX(var(--v1, 0));
+				        transform: scaleX(var(--v1, 0));
+				-webkit-transform-origin: 0 0;
+				        transform-origin: 0 0;
+				margin-top: 43px;
+}
+.error-404 .right p {
+				color: #231F20;
+				font-size: clamp(33px, 16.8px + 0.027 * 100vw, 48px);
+				line-height: 1.25;
+				margin-bottom: clamp(40px, 18.4px + 0.036 * 100vw, 60px);
+				max-width: 596px;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.4s;
+				        transition-delay: 0.4s;
+}
+.error-404 .right .button {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.6s;
+				        transition-delay: 0.6s;
+}
+.error-404:last-child:after {
+				height: 10px;
+				background: #235FEE;
+				border-radius: 5px;
+				content: "";
+				display: block;
+				max-width: 1430px;
+				margin: 176px auto 0;
+				width: 100%;
+}
+@media only screen and (max-width: 768px) {
+				.error-404:last-child:after {
+								margin-top: 58px;
+								width: calc(100% - 60px);
+								height: 5px;
+				}
 }
 /*# sourceMappingURL=style.css.map */
