--- a/wp-content/themes/gtoken/scss/abstracts/_mixins.scss
+++ b/wp-content/themes/gtoken/scss/abstracts/_mixins.scss
@@ -122,8 +122,7 @@
 @mixin line() {
 	height: rv(5px, 10px);
 	width: rv(50px, 85px);
-	border-radius: 5px;
-	background: $secondary-color;
+	background: $pink-color;
 	content: '';
 	display: block;
 	@include tre(.5s);
