--- a/wp-content/themes/gtoken/scss/components/_button.scss
+++ b/wp-content/themes/gtoken/scss/components/_button.scss
@@ -2,15 +2,17 @@
 	cursor: pointer;
 	height: 50px;
 	padding: 0 80px 0 30px;
-	background: $white;
+	background: transparent;
+	color: $light-black;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 18px;
 	text-decoration: none;
 	font-weight: 600;
-	border-radius: 30px;
+	border-radius: 3px;
 	position: relative;
+	border: 1px solid $light-black;
 
 	overflow: hidden;
 	transition: .3s ease-out;
@@ -27,7 +29,8 @@
 		position: relative;
 		z-index: 1;
 		transition: .3s ease-out;
-		color: $primary-color;
+		color: $light-black;
+
 
 		@include responsive('mobile-h') {
 			width: 100%;
@@ -35,7 +38,9 @@
 	}
 
 	&:hover {
-		background-color: $primary-color;
+		background-color: $pink-color;
+		color: $white;
+		border: 1px solid $pink-color;
 
 		.button__text {
 			color: $white;
