--- a/wp-content/themes/gtoken/scss/abstracts/_variables.scss
+++ b/wp-content/themes/gtoken/scss/abstracts/_variables.scss
@@ -2,8 +2,8 @@
 $default-font: 'Bitter', serif !default;
 $secondary-font: 'Bebas Neue', sans-serif !default;
 $third-font: 'Courier Prime', monospace !default;
-$druk: 'Druk-Medium';
-
+$druk: 'Druk-Medium' !default;
+$calluna: 'Calluna' !default;
 /* 
 font-family: 'Bebas Neue', sans-serif;
 font-family: 'Bitter', serif;
