--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -18,6 +18,7 @@
         &__text {
             .title {
                 font-size: rv(50px, 118px);
+                font-family: $calluna;
                 color: $light-black;
                 line-height: 1;
                 font-weight: 300;
