--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -127,6 +127,15 @@ Blocks Styles
 				font-family: "Druk-Medium";
 				src: url("./fonts/Druk-Medium.woff2") format("woff2"), url("./fonts/Druk-Medium.woff") format("truetype");
 }
+@font-face {
+				font-family: "Calluna";
+				@folder : "Calluna/regular";
+				@name : "Calluna-Regular";
+				src: url("@{base-url}/@{folder}/@{name}.eot");
+				src: url("@{base-url}/@{folder}/@{name}.eot?#iefix") format("embedded-opentype"), url("@{base-url}/@{folder}/@{name}.woff") format("woff"), url("@{base-url}/@{folder}/@{name}.ttf") format("truetype"), url("@{base-url}/@{folder}/@{name}.svg#") format("svg");
+				font-weight: normal;
+				font-style: normal;
+}
 .editor-styles-wrapper .acf-block-preview html {
 				-webkit-box-sizing: border-box;
 				        box-sizing: border-box;
@@ -2701,6 +2710,7 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .text-papper .content__text .title {
 				font-size: clamp(50px, -24.4px + 0.124 * 100vw, 118px);
+				font-family: "Calluna";
 				color: #231F20;
 				line-height: 1;
 				font-weight: 300;
