--- a/wp-content/themes/gtoken/scss/main.scss
+++ b/wp-content/themes/gtoken/scss/main.scss
@@ -15,8 +15,7 @@ Text Domain: palermo
 
 // Components
 @import 'components/_menu',
-'components/_button',
-'components/_forms';
+'components/_button';
 
 // Hero
 @import 'hero/_home';
