--- a/wp-content/themes/gtoken/scss/base/_base.scss
+++ b/wp-content/themes/gtoken/scss/base/_base.scss
@@ -97,6 +97,10 @@ strong * {
   margin: 0 auto;
   padding: 0 $site-padding;
   width: 100%;
+
+  @include responsive('tablet-v') {
+    padding: 0 30px;
+  }
 }
 
 .centerDiv {
