--- a/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
@@ -25,6 +25,11 @@
             font-family: $druk;
             max-height: 240px;
 
+            @include responsive('desktop-l') {
+                font-size: 200px;
+                max-height: 180px;
+            }
+
             @include responsive('tablet-v') {
                 max-height: 140px;
             }
@@ -39,6 +44,10 @@
             line-height: 1;
             max-width: 200px;
             text-transform: uppercase;
+
+            @include responsive('desktop-l') {
+                font-size: 60px;
+            }
         }
     }
 
@@ -50,7 +59,7 @@
         //@include fade(0, 100px, true, 0);
         min-height: 505px;
 
-        @include responsive('tablet-v') {
+        @include responsive('desktop-l') {
             min-height: auto;
         }
 
