--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -24,7 +24,7 @@
             &:before {
                 @include absolute();
                 content: "";
-                background-color: rgba(0, 0, 0, 0.3);
+                linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.3) 100%);
                 z-index: 1;
             }
         }
