--- a/wp-content/themes/gtoken/scss/layout/_footer.scss
+++ b/wp-content/themes/gtoken/scss/layout/_footer.scss
@@ -7,7 +7,11 @@
 		//display: flex;
 		//justify-content: space-between;
 		padding-top: rv(35px, 70px);
-		padding-bottom: rv(35px, 70px);
+		padding-bottom: rv(35px, 20px);
+
+		@include responsive('desktop-l') {
+			padding-top: rv(30px, 30px);
+		}
 
 		@include responsive('tablet-h') {
 			flex-wrap: wrap;
@@ -19,11 +23,17 @@
 	}
 
 	&__logo-column {
-		width: 20%;
+		width: 15%;
+
+		@include responsive('desktop-m') {
+			width: 100%;
+		}
 
 		.site-logo {
 			width: 266px;
 			display: block;
+
+
 
 			svg {
 				max-width: 100%;
@@ -41,7 +51,7 @@
 		@include responsive('tablet-h') {
 
 			.site-logo {
-				width: 160px;
+				width: 100px;
 				margin: 0 auto;
 			}
 		}
@@ -52,6 +62,11 @@
 			display: flex;
 			align-items: center;
 
+			@include responsive('desktop-m') {
+				display: block;
+				text-align: center;
+			}
+
 			.copyright,
 			.direccion,
 			.email,
@@ -59,12 +74,26 @@
 				margin-right: 30px;
 				font-size: 20px;
 
+				@include responsive('desktop-l') {
+					margin-right: 15px;
+				}
+
+				@include responsive('desktop-m') {
+					margin-bottom: 20px;
+					margin-right: 0;
+				}
+
 				a {
 					color: $white;
 					text-decoration: none;
+
+					&:hover {
+						opacity: 0.5;
+					}
 				}
 
 			}
+
 
 			.content__link {
 				a {
@@ -96,13 +125,26 @@
 
 	}
 
+	.copyright {
+		text-align: center;
+
+		@include responsive('tablet-h') {
+			margin-top: 20px;
+		}
+	}
+
 	&-top {
 		display: flex;
 		justify-content: space-between;
 
 		@include responsive('tablet-h') {
 			flex-direction: column;
+			width: 100%;
+			align-items: center;
+			gap: 20px;
+
 		}
+
 	}
 
 	&__content-column {
