--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -632,6 +632,15 @@ strong * {
 								padding-top: 15px;
 				}
 }
+.header .site-menu .poylang {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+				gap: 20px;
+}
 
 .scrolled .header .site-menu .site-menu__item:hover .site-menu__first-level {
 				color: #54A8C7;
@@ -1005,7 +1014,12 @@ strong * {
 }
 .site-footer .container {
 				padding-top: clamp(35px, -3.4px + 0.064 * 100vw, 70px);
-				padding-bottom: clamp(35px, -3.4px + 0.064 * 100vw, 70px);
+				padding-bottom: clamp(35px, 51.2px + -0.027 * 100vw, 20px);
+}
+@media only screen and (max-width: 1500px) {
+				.site-footer .container {
+								padding-top: clamp(30px, 30px + 0 * 100vw, 30px);
+				}
 }
 @media only screen and (max-width: 1050px) {
 				.site-footer .container {
@@ -1022,7 +1036,12 @@ strong * {
 				}
 }
 .site-footer__logo-column {
-				width: 20%;
+				width: 15%;
+}
+@media only screen and (max-width: 1260px) {
+				.site-footer__logo-column {
+								width: 100%;
+				}
 }
 .site-footer__logo-column .site-logo {
 				width: 266px;
@@ -1038,7 +1057,7 @@ strong * {
 }
 @media only screen and (max-width: 1050px) {
 				.site-footer__logo-column .site-logo {
-								width: 160px;
+								width: 100px;
 								margin: 0 auto;
 				}
 }
@@ -1054,6 +1073,12 @@ strong * {
 				    -ms-flex-align: center;
 				        align-items: center;
 }
+@media only screen and (max-width: 1260px) {
+				.site-footer__logo-column__two {
+								display: block;
+								text-align: center;
+				}
+}
 .site-footer__logo-column__two .copyright,
 .site-footer__logo-column__two .direccion,
 .site-footer__logo-column__two .email,
@@ -1061,12 +1086,35 @@ strong * {
 				margin-right: 30px;
 				font-size: 20px;
 }
+@media only screen and (max-width: 1500px) {
+				.site-footer__logo-column__two .copyright,
+				.site-footer__logo-column__two .direccion,
+				.site-footer__logo-column__two .email,
+				.site-footer__logo-column__two .content__link {
+								margin-right: 15px;
+				}
+}
+@media only screen and (max-width: 1260px) {
+				.site-footer__logo-column__two .copyright,
+				.site-footer__logo-column__two .direccion,
+				.site-footer__logo-column__two .email,
+				.site-footer__logo-column__two .content__link {
+								margin-bottom: 20px;
+								margin-right: 0;
+				}
+}
 .site-footer__logo-column__two .copyright a,
 .site-footer__logo-column__two .direccion a,
 .site-footer__logo-column__two .email a,
 .site-footer__logo-column__two .content__link a {
 				color: #ffffff;
 				text-decoration: none;
+}
+.site-footer__logo-column__two .copyright a:hover,
+.site-footer__logo-column__two .direccion a:hover,
+.site-footer__logo-column__two .email a:hover,
+.site-footer__logo-column__two .content__link a:hover {
+				opacity: 0.5;
 }
 .site-footer__logo-column__two .content__link a {
 				font-weight: 700;
@@ -1094,6 +1142,14 @@ strong * {
 .site-footer__logo-column__three .socials a svg path {
 				fill: #ffffff;
 }
+.site-footer .copyright {
+				text-align: center;
+}
+@media only screen and (max-width: 1050px) {
+				.site-footer .copyright {
+								margin-top: 20px;
+				}
+}
 .site-footer-top {
 				display: -webkit-box;
 				display: -ms-flexbox;
@@ -1108,6 +1164,11 @@ strong * {
 								-webkit-box-direction: normal;
 								    -ms-flex-direction: column;
 								        flex-direction: column;
+								width: 100%;
+								-webkit-box-align: center;
+								    -ms-flex-align: center;
+								        align-items: center;
+								gap: 20px;
 				}
 }
 .site-footer__content-column {
