--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -771,7 +771,8 @@ strong * {
 				width: 100%;
 				height: 100%;
 				content: "";
-				background-color: rgba(0, 0, 0, 0.3);
+				background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.3)));
+				background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.3) 100%);
 				z-index: 1;
 }
 .hero--home .hero__text {
